Update section titles: Professional Experience and Skills

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         <!-- Experience -->
         <section id="experience">
             <div class="section-header fade-up">
-                <h2 class="section-title">CAREER TRAJECTORY</h2>
+                <h2 class="section-title">PROFESSIONAL EXPERIENCE</h2>
             </div>
             <div class="grid-cards">
                 <div class="card fade-up">
@@ -566,7 +566,7 @@
         <!-- Expertise -->
         <section id="expertise">
             <div class="section-header fade-up">
-                <h2 class="section-title">TECHNICAL ARSENAL</h2>
+                <h2 class="section-title">SKILLS</h2>
             </div>
             <div class="skills-wrapper">
                 <div class="skill-column fade-up">
