Update: Change 'Professional Experience' to 'Experience' and reorder Executive Leadership skills

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         <!-- Experience -->
         <section id="experience">
             <div class="section-header fade-up">
-                <h2 class="section-title">PROFESSIONAL EXPERIENCE</h2>
+                <h2 class="section-title">EXPERIENCE</h2>
             </div>
             <div class="grid-cards">
                 <div class="card fade-up">
@@ -572,8 +572,8 @@
                 <div class="skill-column fade-up">
                     <div class="skill-category">
                         <h3>EXECUTIVE LEADERSHIP</h3>
-                        <div class="skill-item"><span>Product Lifecycle Management</span><span>01</span></div>
-                        <div class="skill-item"><span>Strategic Planning</span><span>02</span></div>
+                        <div class="skill-item"><span>Strategic Planning</span><span>01</span></div>
+                        <div class="skill-item"><span>Product Lifecycle Management</span><span>02</span></div>
                         <div class="skill-item"><span>Team Building</span><span>03</span></div>
                         <div class="skill-item"><span>Market Expansion</span><span>04</span></div>
                     </div>
