Remove skill numbers and update Executive Leadership order: C-Level Management first

--- a/index.html
+++ b/index.html
@@ -572,19 +572,19 @@
                 <div class="skill-column fade-up">
                     <div class="skill-category">
                         <h3>EXECUTIVE LEADERSHIP</h3>
-                        <div class="skill-item"><span>Strategic Planning</span><span>01</span></div>
-                        <div class="skill-item"><span>Product Lifecycle Management</span><span>02</span></div>
-                        <div class="skill-item"><span>Team Building</span><span>03</span></div>
-                        <div class="skill-item"><span>Market Expansion</span><span>04</span></div>
+                        <div class="skill-item"><span>C-Level Management</span></div>
+                        <div class="skill-item"><span>Strategic Planning</span></div>
+                        <div class="skill-item"><span>Product Lifecycle Management</span></div>
+                        <div class="skill-item"><span>Team Building</span></div>
                     </div>
                 </div>
                 <div class="skill-column fade-up">
                     <div class="skill-category">
                         <h3>BLOCKCHAIN ARCHITECTURE</h3>
-                        <div class="skill-item"><span>Smart Contract Development</span><span>01</span></div>
-                        <div class="skill-item"><span>Tokenization Strategy</span><span>02</span></div>
-                        <div class="skill-item"><span>DeFi Protocol Design</span><span>03</span></div>
-                        <div class="skill-item"><span>Wallet Integration</span><span>04</span></div>
+                        <div class="skill-item"><span>Smart Contract Development</span></div>
+                        <div class="skill-item"><span>Tokenization Strategy</span></div>
+                        <div class="skill-item"><span>DeFi Protocol Design</span></div>
+                        <div class="skill-item"><span>Wallet Integration</span></div>
                     </div>
                 </div>
             </div>
