Update skills: Add Investor Relations, P&L Management, Vendor & Partner Relations, Regulatory Compliance. Remove Team Building. Reorder items. Reduce spacing between Skills and Contact sections.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
             position: relative;
         }
 
+        #skills {
+            padding-bottom: 3rem;
+        }
+
         /* Hero Section */
         .hero-grid {
             display: flex;
@@ -574,8 +578,11 @@
                         <h3>EXECUTIVE LEADERSHIP</h3>
                         <div class="skill-item"><span>C-Level Management</span></div>
                         <div class="skill-item"><span>Strategic Planning</span></div>
+                        <div class="skill-item"><span>Investor Relations</span></div>
                         <div class="skill-item"><span>Product Lifecycle Management</span></div>
-                        <div class="skill-item"><span>Team Building</span></div>
+                        <div class="skill-item"><span>P&L Management</span></div>
+                        <div class="skill-item"><span>Vendor & Partner Relations</span></div>
+                        <div class="skill-item"><span>Regulatory Compliance</span></div>
                     </div>
                 </div>
             </div>
