Change 'Product Lifecycle Management' to 'End-to-End Product Development'

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                         <div class="skill-item"><span>C-Level Management</span></div>
                         <div class="skill-item"><span>Strategic Planning</span></div>
                         <div class="skill-item"><span>Investor Relations</span></div>
-                        <div class="skill-item"><span>Product Management Lifecycle</span></div>
+                        <div class="skill-item"><span>End-to-End Product Development</span></div>
                         <div class="skill-item"><span>P&L Management</span></div>
                         <div class="skill-item"><span>Vendor & Partner Relations</span></div>
                         <div class="skill-item"><span>Regulatory Compliance</span></div>
