--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             <div class="skills-wrapper">
                 <div class="skill-column fade-up">
                     <div class="skill-category">
-                        <div class="skill-item"><span>Executive Leadership</span></div>
+                        <div class="skill-item"><span>Executive Management</span></div>
                         <div class="skill-item"><span>Strategic Planning</span></div>
                         <div class="skill-item"><span>Investor Relations</span></div>
                         <div class="skill-item"><span>End-to-End Product Development</span></div>
