--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <div class="hero-stats">
                         <div class="stat">
                             <h4>7+</h4>
-                            <p>Years Exp</p>
+                            <p>Years Experience</p>
                         </div>
                         <div class="stat">
                             <h4>20+</h4>
