Update 'Head of Ops' to 'Head of Ops & BD'

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                 </div>
                 <div class="card fade-up">
                     <span class="card-year">2020</span>
-                    <h3 class="card-title">Head of Ops</h3>
+                    <h3 class="card-title">Head of Ops & BD</h3>
                     <p class="card-subtitle">Tomya Teknoloji</p>
                     <p class="card-desc">Developed core operational frameworks and business strategies for exchange launch.</p>
                 </div>
