Remove 'Teknoloji' from company names

--- a/index.html
+++ b/index.html
@@ -584,12 +584,12 @@
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of BD</h3>
-                    <p class="card-subtitle">Bitexen Teknoloji</p>
+                    <p class="card-subtitle">Bitexen</p>
                     <p class="card-desc">Built exchange platform from ground up. Positioned Bitexen among top three Turkish exchanges by volume within six months.</p>
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of Ops & BD</h3>
-                    <p class="card-subtitle">Tomya Teknoloji</p>
+                    <p class="card-subtitle">Tomya</p>
                     <p class="card-desc">Developed core operational frameworks and business strategies for exchange launch.</p>
                 </div>
             </div>
