Add DEU Blockchain Club experience card, reorder cards (Consultant first), update grid to 5 columns for desktop, adjust card sizes, and update club description

--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
 
         .grid-cards {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 1.5rem;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 1rem;
         }
 
         .card {
             background: var(--bg-panel);
-            padding: 2rem;
+            padding: 1.5rem;
             border: 1px solid var(--border);
             transition: all 0.4s ease;
             position: relative;
@@ -287,7 +287,7 @@
         }
 
         .card-title {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             margin-bottom: 0.5rem;
             color: var(--text-primary);
         }
@@ -303,7 +303,7 @@
 
         .card-desc {
             color: var(--text-secondary);
-            font-size: 0.95rem;
+            font-size: 0.875rem;
         }
 
         /* Skills List */
@@ -573,14 +573,14 @@
             </div>
             <div class="grid-cards">
                 <div class="card fade-up">
-                    <h3 class="card-title">Head of Crypto</h3>
-                    <p class="card-subtitle">Keopex</p>
-                    <p class="card-desc">Led entire crypto operations division. Engineered strategic partnerships and product roadmaps for large-scale integration.</p>
-                </div>
-                <div class="card fade-up">
                     <h3 class="card-title">Consultant</h3>
                     <p class="card-subtitle">Independent</p>
                     <p class="card-desc">Technical advisory for blockchain startups. Focused on infrastructure scalability and market growth strategies.</p>
+                </div>
+                <div class="card fade-up">
+                    <h3 class="card-title">Head of Crypto</h3>
+                    <p class="card-subtitle">Keopex</p>
+                    <p class="card-desc">Led entire crypto operations division. Engineered strategic partnerships and product roadmaps for large-scale integration.</p>
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of BD</h3>
@@ -591,6 +591,11 @@
                     <h3 class="card-title">Head of Ops & BD</h3>
                     <p class="card-subtitle">Tomya</p>
                     <p class="card-desc">Developed core operational frameworks and business strategies for exchange launch.</p>
+                </div>
+                <div class="card fade-up">
+                    <h3 class="card-title">Founder and Chairman</h3>
+                    <p class="card-subtitle">DEU Blockchain Club</p>
+                    <p class="card-desc">Founded Turkiye's second blockchain club with a 200+ member community.</p>
                 </div>
             </div>
         </section>
