Change 'Founder and Chairman' to 'Founder'

--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     <p class="card-desc">Developed core operational frameworks and business strategies for exchange launch.</p>
                 </div>
                 <div class="card fade-up">
-                    <h3 class="card-title">Founder and Chairman</h3>
+                    <h3 class="card-title">Founder</h3>
                     <p class="card-subtitle">DEU Blockchain Club</p>
                     <p class="card-desc">Founded Turkiye's second blockchain club with a 200+ member community.</p>
                 </div>
