--- a/index.html
+++ b/index.html
@@ -609,7 +609,9 @@
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of Crypto</h3>
-                    <p class="card-subtitle">Keopex</p>
+                    <p class="card-subtitle">
+                        <a href="https://www.linkedin.com/company/keopex/about/" target="_blank">Keopex</a>
+                    </p>
                     <p class="card-desc">Led entire crypto operations division. Engineered strategic partnerships and product roadmaps for large-scale integration.</p>
                 </div>
                 <div class="card fade-up">
