Change Turkish exchanges to local exchanges

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                             <img src="https://statics.bitexen.com/assets/logos/white_logo.png" alt="Bitexen" class="company-logo bitexen-logo">
                         </a>
                     </p>
-                    <p class="card-desc">Built exchange platform from ground up. Positioned Bitexen among top three Turkish exchanges by volume within six months.</p>
+                    <p class="card-desc">Built exchange platform from ground up. Positioned Bitexen among top three local exchanges by volume within six months.</p>
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of Ops & BD</h3>
