Change technical advisory to strategic advisory

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                 <div class="card fade-up">
                     <h3 class="card-title">Consultant</h3>
                     <p class="card-subtitle with-line">Independent</p>
-                    <p class="card-desc">Technical advisory for blockchain startups. Focused on infrastructure scalability and market growth strategies.</p>
+                    <p class="card-desc">Strategic advisory for blockchain startups. Focused on infrastructure scalability and market growth strategies.</p>
                 </div>
                 <div class="card fade-up">
                     <h3 class="card-title">Head of Crypto</h3>
