--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
             width: 100%;
             background: var(--bg-dark);
             border-top: 1px solid var(--border);
+            border-bottom: 1px solid var(--border);
             overflow: hidden;
             padding: 0.75rem 0;
             position: relative;
