Update ticker: 10% opacity, remove borders

--- a/index.html
+++ b/index.html
@@ -567,9 +567,7 @@
         /* Crypto Ticker - Optimized */
         .crypto-ticker {
             width: 100%;
-            background: var(--bg-dark);
-            border-top: 1px solid var(--border);
-            border-bottom: 1px solid var(--border);
+            background: rgba(18, 19, 21, 0.1);
             overflow: hidden;
             padding: 0.75rem 0;
             position: relative;
