--- a/index.html
+++ b/index.html
@@ -850,6 +850,12 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
+        // Scroll to top on page load/refresh
+        window.scrollTo(0, 0);
+        if ('scrollRestoration' in history) {
+            history.scrollRestoration = 'manual';
+        }
+
         // Three.js Scene - Nardo Grey Theme
         const container = document.getElementById('webgl-container');
         const scene = new THREE.Scene();
