Rename company logo class and update image source

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             max-width: 80px;
         }
 
-        .company-logo.wuugoo-logo {
+        .company-logo.wlogo {
             height: 24px;
             width: auto;
             filter: brightness(0) invert(1);
@@ -920,7 +920,7 @@
                         <div class="skill-item"><span>ExenPay Development</span><a href="https://bitexen.com" target="_blank"><img src="https://statics.bitexen.com/assets/logos/white_logo.png" alt="Bitexen" class="company-logo bitexen-logo"></a></div>
                         <div class="skill-item"><span>Fan Token Program</span><a href="https://bitexen.com" target="_blank"><img src="https://statics.bitexen.com/assets/logos/white_logo.png" alt="Bitexen" class="company-logo bitexen-logo"></a></div>
                         <div class="skill-item"><span>Crypto Exchange Go-Live</span><a href="https://www.tomya.com" target="_blank"><img src="https://www.tomya.com/assets/img/general/tomya-logo.svg" alt="Tomya" class="company-logo"></a></div>
-                        <div class="skill-item"><span>WuuGoo NFT</span><a href="https://wuugoo.com" target="_blank"><img src="wuugoo-logo.png" alt="WuuGoo" class="company-logo wuugoo-logo"></a></div>
+                        <div class="skill-item"><span>WuuGoo NFT</span><a href="https://wuugoo.com" target="_blank"><img src="wlogo.png" alt="WuuGoo" class="company-logo wlogo"></a></div>
                     </div>
                 </div>
                 <div class="skill-column">
