Update SEO meta tags for improved clarity

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Behlül Yıldız | Blockchain Consultant</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Blockchain consultant with 7+ years of experience. Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
-    <meta name="keywords" content="Blockchain, Crypto, Consultant, Behlül Yıldız, Cryptocurrency, DeFi, Web3">
+    <meta name="description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta name="keywords" content="Blockchain, Crypto, Consultant, Behlül Yıldız, Behlul Yıldız, Behlul Yildiz, Advisor, Bitcoin, Cryptocurrency, DeFi, Web3">
     <meta name="author" content="Behlül Yıldız">
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Behlül Yıldız | Blockchain Consultant">
-    <meta property="og:description" content="Blockchain consultant with 7+ years of experience. Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta property="og:description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://behlulyildiz.com">
     <meta property="og:site_name" content="Behlül Yıldız">
@@ -23,7 +23,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Behlül Yıldız | Blockchain Consultant">
-    <meta name="twitter:description" content="Blockchain consultant with 7+ years of experience. Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta name="twitter:description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
     <meta name="twitter:site" content="@bhllyldz">
     <meta name="twitter:creator" content="@bhllyldz">
     <meta name="twitter:image" content="https://behlulyildiz.com/favicon.svg">
