Add SEO improvements: structured data, semantic HTML, robots.txt, sitemap.xml, language update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,6 +30,44 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://behlulyildiz.com">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Behlül Yıldız",
+        "jobTitle": "Blockchain Consultant",
+        "description": "Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.",
+        "url": "https://behlulyildiz.com",
+        "sameAs": [
+            "https://www.linkedin.com/in/behlulyildiz/",
+            "https://github.com/bhllyldz",
+            "https://x.com/bhllyldz"
+        ],
+        "email": "me@behlulyildiz.com",
+        "knowsAbout": [
+            "Blockchain",
+            "Cryptocurrency",
+            "Product Strategy",
+            "Operational Scalability",
+            "Regulatory Compliance",
+            "Executive Management",
+            "Strategic Planning",
+            "Investor Relations",
+            "Product Development",
+            "P&L Management"
+        ],
+        "alumniOf": {
+            "@type": "Organization",
+            "name": "DEU Blockchain"
+        },
+        "worksFor": {
+            "@type": "Organization",
+            "name": "Independent Consultant"
+        }
+    }
+    </script>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="mask-icon" href="favicon.svg" color="#686b70">
@@ -824,16 +862,18 @@
     <div class="vignette"></div>
 
     <!-- Navigation Embedded -->
-    <div class="embedded-header">
+    <header class="embedded-header">
         <a href="#" class="logo-mobile">BEHLUL YILDIZ</a>
-        <ul class="nav-embedded">
-            <li><a href="#" class="logo-nav">BEHLUL YILDIZ</a></li>
-            <li><a href="#about">Profile</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects-skills">Projects / Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
+        <nav>
+            <ul class="nav-embedded">
+                <li><a href="#" class="logo-nav">BEHLUL YILDIZ</a></li>
+                <li><a href="#about">Profile</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects-skills">Projects / Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <!-- Hero -->
